docs and logic patch
