# docs/swagger.yaml
@@ -123,7 +123,7 @@ paths:
       - Daily Offer
     post:
       consumes:
-      - application/json
+      - multipart/form-data
       description: Create new daily offer
       parameters:
       - description: JWT Token for Auth
@@ -131,6 +131,11 @@ paths:
         name: Authorization
         required: true
         type: string
+      - description: this is a test file
+        in: formData
+        name: file
+        required: true
+        type: file
       produces:
       - application/json
       responses:
@@ -158,7 +163,7 @@ paths:
       tags:
       - Daily Offer
   /dailyOffer/{id}:
-    get:
+    delete:
       description: Delet daily offer by offer id
       parameters:
       - description: JWT Token for Auth
